/**
 * 認証情報。
 */

syntax = "proto3";

package study20180216;

/**
 * アクセストークン方式の認証情報。
 */
message AccessTokenCredentials {
  AccessToken access_token = 1; /// アクセストークンオブジェクト。
}

/**
 * パスワード方式の認証情報。
 */
message PasswordCredentials {
  Password password = 1; /// パスワードオブジェクト。
}

/**
 * 認証情報。
 */
message Credentials {
  oneof credentials {
    AccessTokenCredentials access_token = 1; /// アクセストークン方式の認証情報。
    PasswordCredentials password        = 2; /// パスワード方式の認証情報。
  }
}

/**
 * パスワードオブジェクト。
 */
message Password {
  string id                = 1; /// ユーザーID。
  oneof password {
    string raw_password    = 2; /// 平文パスワード。
    string hashed_password = 3; /// ハッシュ化パスワード。
  }
}

/**
 * アクセストークンオブジェクト。
 */
message AccessToken {
  string token = 2; /// トークン。
}
